# embedlit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/embedlit/: __init__.py  start.py  twitter.py
